feat: Dockerize application with multi-stage build, integrating Ollama and using Supervisor for process management.

--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,18 @@ AUTO_START_SCHEDULER=true
 # Configuración de IA
 # -----------------------------------------------------------------------------
 # Proveedor de IA: 'gemini' o 'ollama'
-AI_PROVIDER=gemini
+# Por defecto usa Ollama (integrado en el contenedor)
+AI_PROVIDER=ollama
 
 # API Key de Google Gemini (requerido si AI_PROVIDER=gemini)
 GEMINI_API_KEY=tu_api_key_aqui
 
-# Configuración de Ollama (requerido si AI_PROVIDER=ollama)
-OLLAMA_URL=http://host.docker.internal:11434
+# -----------------------------------------------------------------------------
+# Configuración de Ollama (integrado en el contenedor)
+# -----------------------------------------------------------------------------
+# Modelo a usar para generar resúmenes
 OLLAMA_MODEL=llama3.2
+
+# Modelo a descargar automáticamente al iniciar el contenedor
+# Modelos populares: llama3.2, llama3.2:1b, mistral, phi3, gemma2
+OLLAMA_PULL_MODEL=llama3.2
