--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,6 +5,17 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
+[program:ollama]
+command=/usr/local/bin/ollama serve
+autostart=true
+autorestart=true
+priority=5
+environment=OLLAMA_HOST="0.0.0.0"
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
 autostart=true
