feat: add API routes and database for news source templates
- Implemented new API routes for fetching templates organized by category and a flat list of all templates.
- Created a database module containing predefined templates for trending topics, releases, newsletters, popular sources, and Spanish sources.
- Updated the frontend to integrate template selection in the source management modal, allowing users to apply predefined templates for easier configuration.

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
     "seed": "node src/database/seed.js",
+    "seed:templates": "node src/database/seed.js --templates",
     "test:db": "node tests/db.test.js",
     "test:scrape": "node tests/scrape.test.js",
     "test:ai": "node tests/ai.test.js"
